--- a/TeamProjectWebsite/Mainpage.html
+++ b/TeamProjectWebsite/Mainpage.html
@@ -19,7 +19,10 @@
       </nav>
       <div class="search-container">
         <input type="search" placeholder="Search">
-        <button type="submit"><img src="search.png" alt="Search"></button>
+        
+        <form action="logout.php" method="post">
+    <button type="submit" class="logout-button">Logout</button>
+</form>
       </div>
     </div>
   </header>
