--- a/TeamProjectWebsite/Mainpage.html
+++ b/TeamProjectWebsite/Mainpage.html
@@ -10,7 +10,7 @@
  
   <header class="main-header">
     <div class="logo-container">
-      <img class="header-title" src="Eximages/Sace_logo.png" alt="SACE Portal Logo">
+      <img class="header-title" src="images/Sace_logo.png" alt="SACE Portal Logo">
       <span class="header-title">SACE Portal</span>
     </div>
     <div class="nav-container">
@@ -102,11 +102,10 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <img src="Sace_logo.png" alt="SACE Portal Logo">
+      <img src="images/Sace_logo.png" alt="SACE Portal Logo">
       <p>Copyright &copy; Sace Student Portal</p>
     </div>
   </footer>
 
-<script src="scripts.js"></script>
 </body>
 </html>
